--- a/blueberries.html
+++ b/blueberries.html
@@ -12,13 +12,17 @@
 
     <nav>
       <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Bluberries</a></li>
-        <li><a href="#">Grapes</a></li>
-        <li><a href="#">Red Currants</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="current" href="blueberries.html">Bluberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
+  <h2>Bluberries</h2>
+  <img src="images/blueberries.jpg" alt="">
+  <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
 
+  <footer>© Berries.</footer>
 </body>
 </html>
