--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Berries</title>
   <link href="css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -12,10 +13,10 @@
 
     <nav>
       <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Bluberries</a></li>
-        <li><a href="#">Grapes</a></li>
-        <li><a href="#">Red Currants</a></li>
+        <li><a class="current" href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Bluberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
@@ -24,5 +25,7 @@
     <h2>Berries, berries, oh my!</h2>
     <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually <b>juicy</b>, <b>round</b>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
   </section>
+
+  <footer>© Berries.</footer>
 </body>
 </html>
