--- a/red-currants.html
+++ b/red-currants.html
@@ -12,13 +12,17 @@
 
     <nav>
       <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Bluberries</a></li>
-        <li><a href="#">Grapes</a></li>
-        <li><a href="#">Red Currants</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Bluberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a class="current" href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
+  <h2>Red currants</h2>
+  <img src="images/red-currants.jpg" alt="">
+  <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
 
+  <footer>© Berries.</footer>
 </body>
 </html>
