--- a/red-currants.html
+++ b/red-currants.html
@@ -2,14 +2,14 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Red Currants | Berries</title>
+  <title>red-currants.html</title>
   <link href="css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Red Currants | Berries</h1>
+    <h1>Berries</h1>
 
     <nav>
       <ul class="nav">
