--- a/blueberries.html
+++ b/blueberries.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <main>
-    <h2>Bluberries</h2>
+    <h2>Blueberries</h2>
     <img src="images/blueberries.jpg" alt="">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
